# owt-server

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
source/agent/plugins/samples/cpu_pipeline/: CMakeLists.txt  mypipeline.cc  mypipeline.h
source/agent/plugins/samples/dummy_plugin/: CMakeLists.txt  myplugin.cc  myplugin.h
source/agent/plugins/samples/face_detection_plugin/: CMakeLists.txt  detectionconfig.h  face_detection_plugin.cpp  face_detection_plugin.h  interactive_face_detection.hpp  main.cpp  myplugin.h
source/agent/plugins/samples/face_recognition_plugin/: CMakeLists.txt  Readme
source/agent/plugins/samples/sample_pipeline/: CMakeLists.txt  main.cc  mypipeline.cc  mypipeline.h  test
source/agent/sip/sipIn/sip_gateway/: CMakeLists.txt  SipCallConnection.cpp  SipCallConnection.h  SipEP.cpp  SipEP.h  SipGateway.cpp  SipGateway.h
source/core/: .clang-format  CMakeLists.txt
source/core/common/: Compiler.h  EventRegistry.h  IOService.cpp  IOService.h  JobTimer.cpp  JobTimer.h  JobTimer2.h  SharedQueue.h  SystemTime.h  logger.h  ltrace.h  rtputils.h
source/core/erizo/src/erizo/: CMakeLists.txt  DtlsTransport.cpp  DtlsTransport.h  MediaDefinitions.h  NiceConnection.cpp  NiceConnection.h  OneToManyProcessor.cpp  OneToManyProcessor.h  SdesTransport.cpp  SdesTransport.h  SdpInfo.cpp  SdpInfo.cpp.orig  SdpInfo.h  SrtpChannel.cpp  SrtpChannel.h  Stats.cpp  Stats.h  Transport.h  WebRtcConnection.cpp  WebRtcConnection.h
source/core/erizo/src/test/: CMakeLists.txt  test.cpp
source/core/mcu/: ACMInputProcessor.cpp  ACMInputProcessor.h  ACMMediaProcessor.cpp  ACMMediaProcessor.h  ACMOutputProcessor.cpp  ACMOutputProcessor.h  AVSyncModule.cpp  AVSyncModule.h  AVSyncTaskRunner.cpp  AVSyncTaskRunner.h  AudioMixer.cpp  AudioMixer.h  AudioProcessor.cpp  AudioProcessor.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Config.cpp  Config.h  ExternalInputGateway.cpp  ExternalInputGateway.h  ExternalVideoProcessor.cpp  ExternalVideoProcessor.h  HardwareVideoMixer.cpp  HardwareVideoMixer.h  InProcessMixer.cpp  InProcessMixer.h  JobTimer.h  MCU.cpp  MCU.h  MCUMixer.cpp  MCUMixer.h  MediaMuxerFactory.cpp  MediaMuxerFactory.h  Mixer.cpp  Mixer.h  MixerInterface.h  OutOfProcessMixer.cpp  OutOfProcessMixer.h  OutOfProcessMixerMessage.h  (+27 more)
source/core/mcu/media/: AudioExternalOutput.cpp  AudioExternalOutput.h  AudioMixer.cpp  AudioMixer.h  BufferManager.cpp  BufferManager.h  Config.cpp  Config.h  DebugRecorder.h  EncodedVideoFrameSender.cpp  EncodedVideoFrameSender.h  ExternalOutput.cpp  ExternalOutput.h  ExternalVideoProcessor.cpp  FakedVideoFrameDecoder.h  FakedVideoFrameEncoder.h  HardwareVideoFrameMixer.cpp  HardwareVideoFrameMixer.h  HardwareVideoMixer.cpp  HardwareVideoMixer.h  I420VideoFrameDecoder.h  JobTimer.h  MediaRecorder.cpp  MediaRecorder.h  MediaRecording.h  MediaUtilities.h  RTSPMuxer.cpp  RTSPMuxer.h  SoftVideoCompositor.cpp  SoftVideoCompositor.h  SoftVideoFrameMixer.h  TaskRunner.h  VCMInputProcessor.cpp  VCMInputProcessor.h  VCMMediaProcessorHelper.h  VCMOutputProcessor.cpp  VCMOutputProcessor.h  VideoCompositor.cpp  VideoCompositor.h  VideoExternalOutput.cpp  (+15 more)
source/core/mcu/media/hardware/: VideoMixEngine.cpp  VideoMixEngine.h  VideoMixEngineImp.cpp  VideoMixEngineImp.h
source/core/oovoo_gateway/: CMakeLists.txt  OoVooConnection.cpp  OoVooConnection.h  OoVooGateway.cpp  OoVooGateway.h  OoVooInboundStreamProcessor.cpp  OoVooInboundStreamProcessor.h  OoVooOutboundStreamProcessor.h  OoVooProtocolHeader.h  OoVooStreamProcessorHelper.h
source/core/owt_base/: AVStreamOut.cpp  AVStreamOut.h  AnalyticsCommon.h  AnalyticsPlugin.h  AudioFrameConstructor.cpp  AudioFrameConstructor.h  AudioFramePacketizer.cpp  AudioFramePacketizer.h  AudioFrameWriter.cpp  AudioFrameWriter.h  AudioUtilities.cpp  AudioUtilities.h  AudioUtilitiesNew.cpp  AudioUtilitiesNew.h  FFmpegDrawText.cpp  FFmpegDrawText.h  FFmpegFrameDecoder.cpp  FFmpegFrameDecoder.h  FastCopy.cpp  FastCopy.h  FrameAnalyzer.cpp  FrameAnalyzer.h  FrameConverter.cpp  FrameConverter.h  FrameProcesser.cpp  FrameProcesser.h  Gateway.h  HEVCTilesMerger.cpp  HEVCTilesMerger.h  I420BufferManager.cpp  I420BufferManager.h  InternalIn.cpp  InternalIn.h  InternalOut.cpp  InternalOut.h  InternalSctp.cpp  InternalSctp.h  LiveStreamIn.cpp  LiveStreamIn.h  LiveStreamOut.cpp  (+56 more)
source/core/owt_base/internal/: InternalClient.cpp  InternalClient.h  InternalServer.cpp  InternalServer.h  RawTestClient.cpp  RawTestServer.cpp  TransportBase.cpp  TransportBase.h  TransportClient.cpp  TransportClient.h  TransportServer.cpp  TransportServer.h
source/core/owt_base/selector/: AudioRanker.cpp  AudioRanker.h  AudioRankerTest.cpp  VideoQualitySwitch.cpp  VideoQualitySwitch.h
source/core/rtc_adapter/: AdapterInternalDefinitions.h  AudioSendAdapter.cc  AudioSendAdapter.h  RtcAdapter.cc  RtcAdapter.h  VideoReceiveAdapter.cc  VideoReceiveAdapter.h  VideoSendAdapter.cc  VideoSendAdapter.h  VieReceiver.cc  VieReceiver.h  VieRemb.cc  VieRemb.h
source/core/rtc_adapter/thread/: ProcessThreadProxy.cc  ProcessThreadProxy.h  RTCProcessThread.h  StaticTaskQueueFactory.cc  StaticTaskQueueFactory.h
source/core/sip_gateway/: SipCallConnection.cpp  SipCallConnection.h  SipEP.cpp  SipEP.h  SipGateway.cpp
source/core/sip_gateway/sipua/: Makefile
source/core/woogeen_base/: AVStreamOut.cpp  AVStreamOut.h  AudioFrameConstructor.cpp  AudioFrameConstructor.h  AudioFramePacketizer.cpp  AudioFramePacketizer.h  AudioFrameWriter.cpp  AudioFrameWriter.h  AudioUtilities.cpp  AudioUtilities.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  DebugRecorder.h  EncodedVideoFrameSender.cpp  EncodedVideoFrameSender.h  EventRegistry.cpp  EventRegistry.h  ExternalInput.cpp  ExternalInput.h  FFmpegDrawText.cpp  FFmpegDrawText.h  FFmpegFrameDecoder.cpp  FFmpegFrameDecoder.h  FastCopy.h  FrameConverter.cpp  FrameConverter.h  FrameProcesser.cpp  FrameProcesser.h  FrameWriter.cpp  FrameWriter.h  Gateway.h  I420BufferManager.cpp  I420BufferManager.h  I420VideoFrameDecoder.h  InternalIn.cpp  InternalIn.h  InternalOut.cpp  InternalOut.h  InternalSctp.cpp  (+95 more)
(+1623 files in other folders)
